Algunas correcciones y relaciones n-arias